# python-sepc265k1

./: README.md  pyproject.toml
python_sepc265k1/: secp256k1_curve.py
