[tool.poetry]
name = "python-sepc265k1"
version = "0.1.0"
description = ""
authors = ["Ratimon <ratixoxo@gmail.com>"]
readme = "README.md"
packages = [{include = "python_sepc265k1"}]

[tool.poetry.dependencies]
python = "^3.10"
pycoin = "^0.92.20230326"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
